fix header link spacing on mobile

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -57,7 +57,7 @@ header {
 }
 
 
-@media (max-width: 730px) {
+@media (max-width: 830px) {
     header {
         flex-direction: column;
         align-items: center;
@@ -82,11 +82,11 @@ header {
     }
 
     .nav-links {
-        width: 95%;
+        width: 100%;
     }
 
     .links {
-        margin: 0 15px; 
+        margin: 0 5px; 
     }
 
     .nav-links {
